--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -1,5 +1,5 @@
 .fundoLogin {
-    background-image: url(../../assets/nuvem.png);
+    background-image: url(../../assets/goku.jpg);
     background-repeat: no-repeat;
     min-height: 100vh;
     width: 100%;
