--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -8,3 +8,10 @@
     border-radius: 15px 0px 0px 15px;
 
   }
+
+  .borda{
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    margin: 20px; 
+    padding: 10px;
+    }
